--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.7",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.0",
@@ -30,8 +31,11 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^6.3.1",
+    "multer": "^1.4.5-lts.1",
     "react-hook-form": "^7.33.1",
     "redux-persist": "^6.0.0",
+    "spacy": "^0.0.4",
+    "spacy-js": "^0.0.5",
     "stripe": "^10.0.0",
     "url-encode-decode": "^1.0.0",
     "xlsx": "^0.18.5"
